package deletedClasses;


public interface IButton {
    void create();
}

