@startuml
'https://plantuml.com/sequence-diagram
skinparam linetype ortho

class Connector{
    - driver: WebDriver
    static Data: ArrayList<WebElement>

    + Connector()
    + Open()
    + Connect()
    - Collect(): ArrayList<WebElement>
    + Close()
    + getDriver(): WebDriver
}

class GetKeySource{
    - box: JComboBox
    - sheets: String[]

    + create(String[] sheets, boolean visable)
    + getKey(RightData rightData, SelectFromSheet selectFromSheet)
    + getKey(RightData rightData)
    + visible(boolean visability)
    + getBox() JComboBox

}

class Confirm{
    + create()
}

class Writer{
    - file: File
    - chekData: CheckData

    + Writer(CheckData checkData)
    + ReadFie()
    + WriteFile()
    + ReturnStatus()
}

class RightData{
    - file: File
    - collection WorksheetCollection
    - keySources: ArrayList<ArrayList>
    - dataSources: ArrayList<ArrayList>
    - connector: Connector
    - collected: <ArrayList<ArrayList<ArrayList<String>>>
    - matches: ArrayList<ArrayList>
    - keySource: String
    - passFound: boolean

    + RightData(Connector connector)
    + createWorkbook()
    + readFile(String sheet, String source): ArrayList<ArrayList>
    + uploadFile()
    + gatherKeySource(String source, String sheet): boolean
    + gatherDataSource(String source, String sheet)
    + getData()
    + checkData(String neededCollom, String neededCollomWebsite): boolean
    + getFile(): File
    + getCollected(): ArrayList<ArrayList<ArrayList<String>>>
 }

class SearchBar{
    - box: JTextField
    + create()
    + action()
    + getBox(): JTextField

}

class SearchButton{
    static button: JButton
    + SearchButton(String name)
    + create(boolean visable)
    + action(JtextField input, Connector connector, RightData rightData, SelectFromSheetButton selectFromSheetButton)
    + geButton(): JButton
}

class SelectFromSheet{
    - box: JComboBox
    - sheets: String[]

    + create(String[] sheets, boolean visable)
    + getSheets(RightData rightData)
    + visible(boolean visibility)
    + getBox(): JComboBox
}

class SelectFromSheetButton{
    - button: JButton
    - sheet: String
    - through = boolean[]

    + SelectFromSheetButton(String name)
    + create(boolean visible)
    + action(SelectFromSheet selectFromSheet, RightData rightData, getKeySource getKeySource, SelectFromSheetButton selectKeySource)
    + action(RightData rightData, GetKeySource getKeySource)
    + action(RightData rightDatam, SelectFromSheet selectFromSheet)
}

class TextString{
    - label: JLabel

    + create(String text, boolean visible)
}

class UploadButton{
    - button: JButton

    + create(boolean visible)
    + action(RightData rightData, SelectFromSheet, selectFromSheet)
}

interface IButton{
    + createButton()
    + action()
}

Connector <-- SearchBar

GetKeySource <-- RightData
GetKeySource <-- SelectFromSheet

RightData <-- Connector

SearchButton <-- SearchBar
SearchButton <-- Connector
SearchButton <-- RightData
SearchButton <-- SelectFromSheetButton

SelectFromSheet <-- RightData

SelectFromSheetButton <-- SelectFromSheet
SelectFromSheetButton <-- RightData
SelectFromSheetButton <-- GetKeySource

UploadButton <-- RightData
UploadButton <-- SelectFromSheet
UploadButton <|-- SearchButton

IButton --|> UploadButton
IButton --|> SearchButton
Confirm <-- Writer

SelectFromSheet --|> GetKeySource







@enduml

class GUI{
    - connector: Connector
    - rightData: RightData
    - excelFilePanel: JPanel
    - searchPanel: JPanel
    - headPanel: JPanel
    - uploadButton: UploadButton
    - searchButton: SearchButton
    - selectFromSheet: SelectFromSheet
    - selectFromSheetFail: GetKeySource
    - selectFromWebsiteFail: GetKeySource
    - selectFromSheetButton: SelectFromSheetButton
    - selectFromSheetButtonFail: selectFromSheetButton
    - searchBar: SearchBar
    - getKeySource: GetKeySource
    - SelectKeySourceButton: SelectFromSheetButton
    - gbcExcel: GridBagConstraints
    - gbcSearch: GridBagConstraints
    - gbcHead: GridBagConstraints
    - showFailFirstTime: boolean
    - loop: interface
    - failBoxText: TextString

    + GUI(Connector connector, RightData rightData)
    - Window()
    - positionPanels
    + actions()

}